[tool.poetry]
name = "budget-users"
version = "0.1.0"
description = ""
authors = ["Lucas Giordano <lucogiordano@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
coverage = "^7.2.5"
bcrypt = "^4.0.1"
ipdb = "^0.13.13"
email-validator = "^2.0.0.post2"
parameterized = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
